[package]
name = "keymgr"
version = "0.1.0"
edition = "2024"
description = "本地密钥管理终端工具"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
dirs = "5"
rpassword = "7"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
